@@ -1,3 +1,9 @@
+2021-05-04 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3223.c:
+	  Fix bug #3223.
+
 2021-05-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c,
